# hyukubox

./: .env.example  .gitignore  CLAUDE.md  HOME_SERVER_SETUP.md  OAUTH_SETUP.md  README.md  deploy.sh  hyukebox-mcp.service  install_homeserver.sh  nginx.conf.example  pyproject.toml  quick_reference.md  test_endpoint.sh
.claude/: settings.local.json
hyukebox/: __init__.py  __main__.py  config.py  middleware.py  server.py
hyukebox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hyukebox/models/: __init__.py  album.py  narrative.py  song.py
hyukebox/services/: __init__.py  llm_service.py  metadata_api.py  youtube_service.py
hyukebox/tools/: __init__.py  deep_search.py  search.py  youtube.py
hyukebox/utils/: __init__.py  cache.py  logging_config.py  rate_limiter.py
reference/Mcp docs/: 01_What is the MCP.md  02_Architecture.md  03_Servers.md  04_Clients.md  05_Versioning.md  06_Connect to local MCP servers.md  07_Connect to remote MCP Servers.md  08_Build an MCP Server.md  09_Build an MCP client.md  10_SDKs.md  11_Understanding Authorization in MCP.md  12_MCP Inspector.md  13_Specification.md  14_Key Changes.md  15_Architecture.md  16_Overview.md  17_Lifecycle.md  18_Transports.md  19_Authorization_part1.md  19_Authorization_part2.md  19_Authorization_part3.md  19_Authorization_part4.md  20_Security Best Practices_part1.md  20_Security Best Practices_part2.md  21_Cancellation.md  22_Ping.md  23_Progress.md  24_Tasks.md  25_Roots.md  26_Sampling.md  27_Elicitation.md  28_Overview.md  29_Prompts.md  30_Resources.md  31_Completion.md  32_Tools.md  33_Logging.md  34_Pagination.md
tests/: __init__.py  conftest.py
tests/fixtures/: mock_responses.json
