[project]
name = "hyukebox"
version = "0.1.0"
description = "Last.fm API MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hyukebox"]
